fix logo on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -73,3 +73,9 @@
 	}
 }
 
+@media (max-width: 767px) {
+  .navbar-brand {
+    padding-left: 0px;
+  }
+}
+
